--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- (Mostrar e Ocultar) -->
+(Mostrar e Ocultar) -->
 
 
 <!-- <!DOCTYPE html>
@@ -21,9 +21,9 @@
 
 
 
-<!-- >(Formulário de Validação Simples) -->
+ >(Formulário de Validação Simples)
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -41,4 +41,4 @@
 
     <script src="aula.js"></script>
 </body>
-</html> -->
+</html> 
